<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:fab="http://schemas.android.com/apk/res-auto"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:background="@color/activity_background"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity"
              android:weightSum="1">

    <com.spark.submitbutton.SubmitButton
        android:layout_height="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:text="@string/make_descision"
        android:id="@+id/Button_decide"
        android:layout_weight="0.25"
        android:clickable="true"
        android:onClick="onClick"
        android:textColor="@color/gray"
        android:gravity="center|center_horizontal"
        app:sub_btn_background="@color/white"
        app:sub_btn_duration="2200"
        app:sub_btn_line_color="@color/green"
        app:sub_btn_ripple_color="@color/green"
        app:sub_btn_tick_color="@color/white"
        android:layout_width="match_parent"
        />

    <com.spark.submitbutton.SubmitButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:text="@string/my_solutions"
        android:id="@+id/Button_myDecide"
        android:layout_weight="0.25"
        android:clickable="true"
        android:textColor="@color/gray"
        android:gravity="center|center_horizontal"
        app:sub_btn_background="@color/white"
        app:sub_btn_duration="2200"
        app:sub_btn_line_color="@color/green"
        app:sub_btn_ripple_color="@color/green"
        app:sub_btn_tick_color="@color/white"
        android:onClick="onClick1"
        />

    <com.spark.submitbutton.SubmitButton
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:text="@string/about"
        android:id="@+id/Button_about"
        android:clickable="true"
        android:textColor="@color/gray"
        android:onClick="onClick2"
        android:gravity="center|center_horizontal"
        app:sub_btn_background="@color/white"
        app:sub_btn_duration="2200"
        app:sub_btn_line_color="@color/green"
        app:sub_btn_ripple_color="@color/green"
        app:sub_btn_tick_color="@color/white"
        android:layout_weight="0.33"
        android:fillAfter= "true"/>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|right"
        android:layout_margin="24dp"
        android:src="@drawable/ic_add_white_24dp"
        android:onClick="onClick"
        fab:fab_colorNormal="#009688"
        fab:fab_colorPressed="#4DB6AC"
        fab:fab_colorRipple="#4DB6AC"
        />


</LinearLayout>